# Airguardian

./: .env  .env.example  .gitignore  Makefile  README.md  celery_app.py  celerybeat-schedule  docker-compose.yml  drone_db.py  error_handlers.py  fetcher.py  front.js  index.html  logger.py  main.py  model.py  nfz.json  notes.txt  poetry.txt  pyproject copy.toml  pyproject.toml  schemas.py  tasks.py  temp.js  test_db.py  utils.py
app/: __init__.py  celery_app.py  config.py  drone_db.py  error_handlers.py  fetcher.py  logger.py  main.py  model.py  schemas.py  tasks.py  utils.py
docker/: Dockerfile
routes/: scan.py
static/: front.js  index.html  map.html
