[tool.poetry]
package-mode = false

[project]
name = "airguardian"
version = "0.1.0"
description = ""
authors = [
    {name = "mzhitnik, mzhivoto"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.110.0,<0.111.0)",
    "uvicorn (>=0.29.0,<0.30.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
