[tool.poetry]
name = "airguardian"
version = "0.1.0"
description = ""
authors = ["mzhitnik <mzhivoto>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.0.0"
fastapi = ">=0.110.0,<0.111.0"
uvicorn = ">=0.29.0,<0.30.0"
httpx = ">=0.27.0,<0.28.0"
sqlalchemy = ">=2.0,<3.0"
asyncpg = ">=0.29.0,<0.30.0"
python-dotenv = ">=1.0.1,<2.0.0"
requests = ">=2.32.4,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
celery = ">=5.5.3,<6.0.0"
redis = ">=6.2.0,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
